--- a/src/components/ContactList/ContactList.scss
+++ b/src/components/ContactList/ContactList.scss
@@ -38,24 +38,28 @@
   }
 
   .contacts__search {
-    // border: 1px solid blue;
+    // border: 1px solid red;
+    display: flex;
+    align-items: center;
+    height: 50px;
     border-bottom: 1px solid rgba(128, 128, 128, 0.2);
     background  : white;
-    padding: 10px;
+    padding: 0 12px;
 
     .search__container {
       width: 100%;
+      height: 36px;
       background-color: var(--white-color);
       display: flex;
       flex-direction: row;
       align-items: center;
       border-radius: 10px;
-      padding: 5px 10px;
+      padding: 0 10px;
 
       .search-icon {
         color: var(--gray-color);
-        width: 28px;
-        height: 28px;
+        width: 22px;
+        height: 22px;
       }
 
       input {
