--- a/src/index.scss
+++ b/src/index.scss
@@ -11,7 +11,7 @@
   --primary-color: #f8f9fb;
   --secondary-color: #313bac;
   --lightWhite-color: #f6f7f8;
-  --white-color: #ededed;
+  --white-color: #f0f2f5;
   --black-color: #030303;
   --gray-color: #6b7688;
   --lightGray-color: #e4e4e4;
