--- a/src/index.scss
+++ b/src/index.scss
@@ -9,12 +9,13 @@
 
 :root {
   --primary-color: #f8f9fb;
-  --secondary-color: #313bac;
   --lightWhite-color: #f6f7f8;
   --white-color: #f0f2f5;
   --black-color: #030303;
   --gray-color: #6b7688;
   --lightGray-color: #e4e4e4;
+  --darkGray-color: #303030;
+  --lightGreen-color: #daf8cd;
   --font-base: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 
   font-family: var(--font-base);
