--- a/src/components/ContactList/ContactList.scss
+++ b/src/components/ContactList/ContactList.scss
@@ -6,6 +6,7 @@
   max-width: 400px;
   height: 100%;
   background-color: var(--ligthWhite-color);
+  border-right: 1px solid rgba(128, 128, 128, 0.2);
 
   .contacts__header {
     // border: 1px solid green;
